--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ p {
 form {
   margin-bottom: 25px;
   padding: 15px;
-  background-color: #87D37C;
+  background-color: #C87CD3;
   display: inline-block;
   width: 100%;
   max-width: 340px;
@@ -46,19 +46,19 @@ input {
 input[type=submit] {
   font-size: 16px;
   border-radius: 3px;
-  background-color: #E4F1FE;
+  background-color: #FEF1E4;
   border: 1px solid grey;
   box-shadow: 2px 2px #999;
   cursor: pointer;
 }
 
 input[type=submit]:hover {
-  background-color: #FFFEC4;
+  background-color: #C4C5FF;
 }
 
 code {
   font-family: monospace;
   font-size: 1.2em;
-  background-color: #FFFEC4;
+  background-color: #C4C5FF;
   padding: 2px;
 }
